feat:added main content till statistic

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                 <div class="Content__item">
                                     <div>
                                         <span>Balance</span>
-                                        <p>$15,756</p>
+                                        <p>$5,756</p>
                                     </div>
                                     <div>
                                         <img src="images/Chip_Card.png">
@@ -112,17 +112,60 @@
                         </div>
                     </div>
                     <div class="Content__properties">
+                        <h2>Recent Transaction</h2>
                         <div class="Content__adjust">
-                            <img src="images/Group 313.png">
-                            <div class="Content__properties__item">
-                                <p>Deposit from my Card</p>
-                                <span>28 January 2021</span>
+                            <div class="Content__flex">
+                                <img src="images/Group 313.png">
+                                <div class="Content__properties__item">
+                                    <div class="Content__properties__items">
+                                        <p>Deposit from my Card</p>
+                                        <span>28 January 2021</span>
+                                    </div>
+                                    <div class="Content__properties--red">
+                                        <span>-$850</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="Content__flex">
+                                <img src="images/Group 314.png">
+                                <div class="Content__properties__item">
+                                    <div class="Content__properties__items">
+                                        <p>Deposit from my Card</p>
+                                        <span>28 January 2021</span>
+                                    </div>
+                                    <div class="Content__properties--green">
+                                        <span>+$2,500</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="Content__flex">
+                                <img src="images/Group 315.png">
+                                <div class="Content__properties__item">
+                                    <div class="Content__properties__items">
+                                        <p>Deposit from my Card</p>
+                                        <span>28 January 2021</span>
+                                    </div>
+                                    <div class="Content__properties--green">
+                                        <span>+$5,400</span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="Statistics">
+                    <div class="Statistics__table">
+                        <h2>Weekly Activity</h2>
+                        <img src="images/Group 240.png">
+                    </div>
+                    <div class="Statistics__circle">
+                        <h2>Expense Statistics</h2>
+                        <img src="images/Group 399.png">
+                    </div>
+                </div>
             </div>
         </div>
+    </div>
 </body>
 </body>
 
